TS-4880: Fix missing utils::internal::initTransactionManagement() call This closes #1034.